BMSSimplificationEclipseWS/zEUFULL-PRODMigration-MetadataWithPermsXLation/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ABILIFY_Speaker_BMS_SHARED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ABILIFY Speaker?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AHA__c</fullName>
        <description>American Hospital Association identifier.  Used for hospital accounts.</description>
        <label>AHA #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AI_Relationship_Status__c</fullName>
        <label>AI Relationship status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATL_Last_Update_Date_Time_vod__c</fullName>
        <description>Last time this Account was updated using the Account Territory Loader. To enable use of this field, set the ATL_LAST_UPDATE_TRACKING field on Veeva Settings to TRUE.</description>
        <inlineHelpText>Do not modify. Set automatically by Account Territory Loader process.</inlineHelpText>
        <label>ATL Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Abilify_Drop_BMS_US__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPRO - August 2013 - BMS US Requirements &amp; Design: Rep acknowledgement of Abilify drop in accordance with CIA requirements.</description>
        <label>Abilify Drop?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_Category_BMS_EMEA__c</fullName>
        <description>VPRO - December 2013 - BMS EMEA Core Requirements &amp; Design: Custom field to capture the category of Organization customers.  This field is editable by access users.</description>
        <label>Access Category</label>
        <picklist>
            <picklistValues>
                <fullName>Clinical Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government agencies-political</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCP Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital &amp; Clinics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Associations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payers</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Access_Decision_BMS_CA__c</fullName>
        <description>Decision makers requiring clinical, scientific, and pharmacoeconomic information to support access to BMS medicines at local healthcare systems</description>
        <inlineHelpText>Decision makers requiring clinical, scientific, and pharmacoeconomic information to support access to BMS medicines at local healthcare systems</inlineHelpText>
        <label>Access Decision Makers?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Access_Priority__c</fullName>
        <label>Access Priority</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Profile__c</fullName>
        <description>count of access profile records for an account</description>
        <label>Access Profile</label>
        <summaryForeignKey>Access_Influence__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Access_Stakeholder_Engagement_Plan__c</fullName>
        <description>VPRO - November 2013 - BMS EMEA Core Requirements &amp; Design: Custom field to denote if a customer is on an access engagement plan.</description>
        <label>Access Engagement Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Cardiovascular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metabolic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virology</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Access_influence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access influence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Class_vod__c</fullName>
        <description>The indicator of hospital/pharmacy which each pharmaceutical company use for analyzing purposes.</description>
        <label>Account Class</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Financial_Situation_BMS_EMEA__c</fullName>
        <label>Account Financial Situation</label>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Group_vod__c</fullName>
        <description>When populated, marks this account as a member of the designated group of accounts. The Account Group name must be an exact literal match across all accounts that are members of this group.</description>
        <label>Account Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Identifier_vod__c</fullName>
        <description>Additional Account Identifier</description>
        <label>Account Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Search_Business_vod__c</fullName>
        <description>Text value of Primary Parent Lookup with spaces removed</description>
        <formula>SUBSTITUTE( Primary_Parent_vod__r.Name,&quot; &quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Search Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Search_FirstLast_vod__c</fullName>
        <description>If Person account, set the field value as firstname&amp;lastname no space</description>
        <formula>IF( IsPersonAccount , SUBSTITUTE(FirstName,&quot; &quot;,&quot;&quot;) &amp; SUBSTITUTE(LastName,&quot; &quot;,&quot;&quot;) ,Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Search FirstLast</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Search_LastFirst_vod__c</fullName>
        <description>If Person account, set the field value as lastname&amp;firstname no space</description>
        <formula>IF( IsPersonAccount ,SUBSTITUTE( LastName,&quot; &quot;,&quot;&quot;) &amp; SUBSTITUTE(FirstName,&quot; &quot;,&quot;&quot;),Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Search LastFirst</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Source_Country_BMS_CORE__c</fullName>
        <label>Account Source Country</label>
        <picklist>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BQ</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Status_BMS_CA__c</fullName>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Tier_BMS_US__c</fullName>
        <description>VPRO - December 2012 - BMS Global Requirements &amp; Design: Account tiering for MM users</description>
        <label>Account Tier</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Account type (e.g. Plan Provider, Network or Specialty Org). Used by MCO and MCO Plan accounts.</description>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>ACNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADVOCACY GROUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancer Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cluster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donor Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FQHC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Sponsored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOVT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRC1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Purchasing Organisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Clinic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HGRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_BMS_CN__c</fullName>
        <description>Address</description>
        <label>Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adherence_Councilor_BMS_US_del__c</fullName>
        <label>Adherence Counselor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Administrative_Title_BMS_CN__c</fullName>
        <description>Administrative title of this professional</description>
        <label>Administrative Title</label>
        <picklist>
            <picklistValues>
                <fullName>A001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT003</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alternate_Name_vod__c</fullName>
        <description>Alternate name of one account used in iRep to show an alpha-bar.</description>
        <label>Alternate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anzatax_Patients_Share_BMS_CN__c</fullName>
        <formula>IF((Anzatax_Potential_Patients__c + 
Homemade_Docetaxel_Poten_Patient_BMS_CN__c + 
Homemade_Paclitaxel_Poten_Patient_BMS_CN__c + 
Liposome_Potential_Patients_BMS_CN__c + 
Paclitaxel_Potential_Patients_BMS_CN__c + 
Taxol_Potential_Patients_BMS_CN__c + 
Taxotere_Potential_Patients_BMS_CN__c ) = 0, 
0, 
Anzatax_Potential_Patients__c / (Anzatax_Potential_Patients__c + 
Homemade_Docetaxel_Poten_Patient_BMS_CN__c + 
Homemade_Paclitaxel_Poten_Patient_BMS_CN__c + 
Liposome_Potential_Patients_BMS_CN__c + 
Paclitaxel_Potential_Patients_BMS_CN__c + 
Taxol_Potential_Patients_BMS_CN__c + 
Taxotere_Potential_Patients_BMS_CN__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anzatax Patients Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Anzatax_Potential_Patients__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Anzatax Potential Patients</description>
        <label>Anzatax Potential Patients</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Email_Opt_Type_vod__c</fullName>
        <description>Approved_Email_Opt_Type_vod hold the consent type for the Account. Used in Approved Email to drive the opt-in consent model.</description>
        <label>Approved Email Consent</label>
        <picklist>
            <picklistValues>
                <fullName>Explicit_Opt_In_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implicit_Opt_In_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Authorization_talk_to_Nurses_BMS_EMEA_NL__c</fullName>
        <description>VPRO March 2014: NL specific requirement on consent to speak to nurses.</description>
        <label>Authorization to talk to Nurses?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Authorizing_Prescriber_BMS_SHARED__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collaborating Physician</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Authorizing Prescriber)</relationshipLabel>
        <relationshipName>AuthorizingPrescriber</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Age_Range_BMS_US__c</fullName>
        <description>VPRO - March 2013 - BMS Global Requirements &amp; Design: Average Age Range specification for organizations for VIR PCAM users</description>
        <label>Average Age Range</label>
        <picklist>
            <picklistValues>
                <fullName>Under 13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ages 13-14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ages 15-19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ages 20-24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ages 25-29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ages 30-34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ages 35-39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ages 40-44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ages 45-49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ages 50-54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ages 55-59</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ages 60-64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ages 65 or older</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Avg_Calls_Mo_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom formula field to display the average calls per month for a given account.</description>
        <formula>YTD_Activity_BMS__c/ Month(Today())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Interactions / Mo</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BARACLUDE_Speaker_BMS_SHARED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BARACLUDE Speaker?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMS_Last_Access_Interaction_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Access Interaction User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMS_Last_Access_Interaction__c</fullName>
        <label>Last Access Interaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMS_Last_Access_Interaction_date__c</fullName>
        <label>Last Access Interaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMS_Target_type__c</fullName>
        <label>Target type</label>
        <picklist>
            <picklistValues>
                <fullName>Tumor Specialist Team Organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Specialist Team Organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tumor Specialist Team Individuals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Specialist Team Individuals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Individuals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BP_ID_BMS_CORE__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom Field to store BMS&apos; unique identifier for accounts.</description>
        <externalId>true</externalId>
        <label>Master ID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BP_ID__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom Field to store BMS&apos; unique identifier for accounts.</description>
        <label>Master ID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BYDUREON_Speaker_BMS_SHARED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BYDUREON Speaker?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BYETTA_Speaker_BMS_SHARED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BYETTA Speaker?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beds_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Beds(Eliquis)</description>
        <label>Beds</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beds__c</fullName>
        <description>Number of beds at this facility.</description>
        <label># Beds</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthdate_BMS_SHARED__c</fullName>
        <description>VPRO EMEA April-2015: created field, initially requested by Italy.</description>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brick_BMS_EMEA__c</fullName>
        <description>BMS ACN : September 2014 - Brick Field which gets data from Address Object</description>
        <label>Brick</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_BMS_US__c</fullName>
        <description>VPRO - December 2012 - BMS Global Requirements &amp; Design: Organization budget for Financials section for MM users</description>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Description__c</fullName>
        <description>Business description for this account.  Used for MCO and MCO Plan accounts.</description>
        <label>Business Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Professional_Person_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the stand-alone Person Account record that the Business_Professional_vod is associated to.  Lookup should only allow a Person Account to be selected.
�</description>
        <label>Business Professional Person</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Business Professional Person)</relationshipLabel>
        <relationshipName>Business_Professional_Person_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bydureon_Quintile_BMS_US__c</fullName>
        <label>Bydureon Quintile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bydureon_Rating_BMS_US__c</fullName>
        <label>Bydureon Rating</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bydureon_Segment_BMS_US__c</fullName>
        <label>Bydureon Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Byetta_Quintile_BMS_US__c</fullName>
        <label>Byetta Quintile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Byetta_Rating_BMS_US__c</fullName>
        <label>Byetta Rating</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Byetta_Segment_BMS_US__c</fullName>
        <label>Byetta Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Opt_Type_vod__c</fullName>
        <description>Holds the CLM consent type for the Account. Used in CLM to drive the opt-in consent model.</description>
        <label>CLM Opt Type</label>
        <picklist>
            <picklistValues>
                <fullName>Explicit_Opt_In_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implicit_Opt_In_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CML_Patients_BMS_CN__c</fullName>
        <description>CML病人数 for ONCO - SPRYCEL</description>
        <label>CML Patients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COT_BMS_US__c</fullName>
        <label>COT</label>
        <picklist>
            <picklistValues>
                <fullName>Acute Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teaching</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Call_Back_Nurse_BMS_US__c</fullName>
        <description>VPRO - March 2013 - BMS Global Requirements &amp; Design: Call Back Nurse specification for Global Sales (sampling) users</description>
        <label>Call Back Nurse</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Reminder_vod__c</fullName>
        <description>The contents of this field are displayed on every call against this account in the zvod_Account_Call_Reminder_vod_c_vod location.</description>
        <label>Interaction Reminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Carboplatin_Imitation_Pat_Share_BMS_CN__c</fullName>
        <formula>IF((Nedaplatin_Potential_Patients_BMS_CN__c + 
Cisplatin_Potential_Patients_BMS_CN__c + 
Carboplatin_Imitation_Pote_Pat_BMS_CN__c + 
Paraplatin_Potential_Patients_BMS_CN__c)= 0, 
0, 
Carboplatin_Imitation_Pote_Pat_BMS_CN__c / (Nedaplatin_Potential_Patients_BMS_CN__c + 
Cisplatin_Potential_Patients_BMS_CN__c + 
Carboplatin_Imitation_Pote_Pat_BMS_CN__c + 
Paraplatin_Potential_Patients_BMS_CN__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carboplatin Imitation Patients Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Carboplatin_Imitation_Pote_Pat_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Carboplatin Imitation Potential Patients</description>
        <label>Carboplatin Imitation Potential Patients</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Career_Status_vod__c</fullName>
        <description>Picklist of current career status</description>
        <label>Career Status</label>
        <picklist>
            <picklistValues>
                <fullName>Peak_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerging_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cash_BMS_US__c</fullName>
        <label>% Cash:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cisplatin_Patients_Share_BMS_CN__c</fullName>
        <formula>IF((Nedaplatin_Potential_Patients_BMS_CN__c + 
Cisplatin_Potential_Patients_BMS_CN__c + 
Carboplatin_Imitation_Pote_Pat_BMS_CN__c + 
Paraplatin_Potential_Patients_BMS_CN__c)= 0, 
0, 
Cisplatin_Potential_Patients_BMS_CN__c / (Nedaplatin_Potential_Patients_BMS_CN__c + 
Cisplatin_Potential_Patients_BMS_CN__c + 
Carboplatin_Imitation_Pote_Pat_BMS_CN__c + 
Paraplatin_Potential_Patients_BMS_CN__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cisplatin Patients Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cisplatin_Potential_Patients_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Cisplatin Potential Patients</description>
        <label>Cisplatin Potential Patients</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clinic_Hospital_Name_BMS_EMEA__c</fullName>
        <description>BMS ACN : Sept 2016 (Q3 GRM) - Field to display the building name of the Main Institution related to the customer.</description>
        <label>Clinic/Hospital Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Trial_Participation_BMS_EMEA__c</fullName>
        <description>VPRO - November 2013 - BMS EMEA Requirements: New field to track the Interest and Needs of the HCP. Added to the section Interest and Needs of the EMEA MSL layout</description>
        <label>Clinical Trial Participation?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>